--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,14 @@ table {
 }
 .carousel-caption {
   background-color: rgba(255, 255, 255, 0.4);
+  top: 20%;
   width: 15%;
   height: 40%;
   max-height: 50%;
+}
+.carousel-indicators .active {
+  background-color: #f4511e;
+}
+.carousel-indicators li {
+  background-color: rgba(244, 81, 30, 0.3);
 }
